# fpga-vision

./: .gitignore  LICENSE  README.md  load-array.py  matmul.py
cpu/: README.md
cpu/cpp/sgm/: CMakeLists.txt
cpu/cpp/sgm/src/: CMakeLists.txt  host.cpp  sgm.cpp  sgm.h  utils.h
cpu/python/: README.md  requirements.txt
cpu/python/notebooks/: sgm.ipynb
cpu/python/notebooks/.ipynb_checkpoints/: sgm-checkpoint.ipynb
platform/orangepi5plus/: README.md
sim/: .gitignore  run_godot.sh
sim/godot/: building_a.tscn  building_c.tscn  icon.svg.import  main.tscn  project.godot  road_junction.tscn  sedan.tscn
sim/godot/Assets/gltf/: base.gltf.import  bench.gltf.import  building_A.gltf.import  building_A_withoutBase.gltf.import  building_B_withoutBase.gltf.import  building_C.gltf.import  building_D_withoutBase.gltf.import  building_E.gltf.import  building_E_withoutBase.gltf.import  building_F.gltf.import  building_F_withoutBase.gltf.import  building_G.gltf.import  building_G_withoutBase.gltf.import  building_H.gltf.import  car_stationwagon.gltf.import  road_corner_curved.gltf.import  road_junction.gltf.import  road_straight_crossing.gltf.import  trafficlight_B.gltf.import  trafficlight_C.gltf.import  (+3 more)
sim/godot_broken/: 2025941.webp.import  building_b.tscn  road_corner.tscn  road_straight.tscn  road_tsplit.tscn  sedan.gd
vivado/: .gitignore  Dockerfile  Makefile  install_config.txt
yolo/: 100k.yaml  10k.yaml  dataset.yaml  generate_10k_dataset.ipynb  json_to_yolo.ipynb  labels.txt  run_train.sh  train_model.py  train_output.txt  yolo.ipynb  yolo_v8.ipynb
(+241 files in other folders)
